# sockudo-ws

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: napi-ci.yml
autobahn/: server.rs
benches/: websocket_bench.rs
examples/: axum_deflate.rs  axum_deflate_custom.rs  axum_echo.rs  axum_pubsub_chat.rs  axum_split.rs  axum_split_deflate.rs  http2_echo.rs  http3_echo.rs  pubsub_echo.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_frame.rs  protocol.rs  unmask.rs  utf8_validation.rs
napi-bindings/: .gitignore  Cargo.toml  README.md  index.mjs  jsr.json  package-lock.json  package.json
napi-bindings/examples/: 0-simple-test.js  1-echo-server.js  2-client.js  3-pubsub-chat.js  4-chat-client.js  5-performance-test.js  6-standalone-pubsub.js
napi-bindings/src/: client.rs  config.rs  error.rs  lib.rs  message.rs  pubsub.rs  runtime.rs  server.rs  stream.rs
src/: alloc.rs  axum_integration.rs  compression.rs  deflate.rs  error.rs  frame.rs  handshake.rs  lib.rs  mask.rs  protocol.rs  pubsub.rs  queue.rs  simd.rs  stream.rs  utf8.rs
src/http2/: handshake.rs
src/http3/: handshake.rs
src/stream/: mod.rs  websocket.rs
